k8s/argocd/resources/render/argocd-notifications-controller-network-policy-NetworkPolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-notifications-controller-network-policy
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 9001
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
  policyTypes:
    - Ingress
